--- a/newEquipmentpage/compPage.html
+++ b/newEquipmentpage/compPage.html
@@ -41,7 +41,7 @@
         margin: auto;
         text-decoration-color: #000;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .cardTop {
@@ -57,7 +57,7 @@
         margin: auto;
         text-decoration-color: #000;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .cardSelect {
@@ -74,7 +74,7 @@
         margin: auto;
         color: #ffffff;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .card img {
@@ -114,6 +114,7 @@
 
     .spacer {
         height: 30px;
+        width: 100%;
     }
 
     .spacerX {
@@ -126,8 +127,8 @@
     }
 
     .itemBox {
-        height: 300px;
-        width: 250px;
+        height: 250px;
+        width: 300px;
         border: 1px solid rgb(193, 193, 193);
         border-radius: 10px;
         text-decoration-color: #000000;
@@ -142,8 +143,10 @@
     .itemBox img {
         display: block;
         margin: auto;
-        height: 85%;
-        width: 85%;        
+        height: 200px;
+        width: 100%;        
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;      
     }
 
     a {
@@ -177,7 +180,7 @@
         margin: auto;
         color: #ffffff;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .openbtn {
@@ -223,6 +226,9 @@
         }
         .itemTitle {
             display: block;
+        }
+        .spacer {
+            display: none;
         }
     }
 
@@ -308,7 +314,7 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/ComputerCables">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_ComputerCables.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/cablesComputing.JPG" /> 
             </a>
             <br>
             <div class="padding">
@@ -317,7 +323,7 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/DrawingTablets">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_DrawingTablets.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/drawingtab.JPG" /> 
             </a>
             <br>
             <div class="padding">
@@ -326,7 +332,7 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/FileStorage">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_FileStorage.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/filereader.JPG" /> 
             </a>
             <br>
             <div class="padding">
@@ -335,7 +341,7 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/Laptops">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Laptops.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/laptops.JPG" /> 
             </a>
             <br>
             <div class="padding">
