--- a/newEquipmentpage/makerPage.html
+++ b/newEquipmentpage/makerPage.html
@@ -41,7 +41,7 @@
         margin: auto;
         text-decoration-color: #000;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .cardTop {
@@ -57,7 +57,7 @@
         margin: auto;
         text-decoration-color: #000;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .cardSelect {
@@ -74,7 +74,7 @@
         margin: auto;
         color: #ffffff;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .cardSelect img {
@@ -114,6 +114,7 @@
 
     .spacer {
         height: 30px;
+        width: 100%;
     }
 
     .spacerX {
@@ -126,8 +127,8 @@
     }
 
     .itemBox {
-        height: 300px;
-        width: 250px;
+        height: 250px;
+        width: 300px;
         border: 1px solid rgb(193, 193, 193);
         border-radius: 10px;
         text-decoration-color: #000000;
@@ -142,8 +143,10 @@
     .itemBox img {
         display: block;
         margin: auto;
-        height: 85%;
-        width: 85%;        
+        height: 200px;
+        width: 100%;          
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;    
     }
 
     a {
@@ -177,7 +180,7 @@
         margin: auto;
         color: #ffffff;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .openbtn {
@@ -224,6 +227,9 @@
         }
         .itemTitle {
             display: block;
+        }
+        .spacer {
+            display: none;
         }
     }
 </style>
@@ -307,14 +313,14 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/ButtonMakers">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_ButtonMakers.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/button.JPG" /> 
             </a>
             <br>
             <div class="padding">
                 Button Makers
             </div>
         </div>
-        <div class="itemBox">
+        <!-- <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/Microprocessors">
                 <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Microprocessors.png" /> 
             </a>
@@ -322,10 +328,10 @@
             <div class="padding">
                 Micro&shy;processors
             </div>
-        </div>
+        </div> -->
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/Sewing">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Sewing.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/sewing.JPG" /> 
             </a>
             <br>
             <div class="padding">
@@ -334,7 +340,7 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/Tools">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Tools.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/tools.JPG" /> 
             </a>
             <br>
             <div class="padding">
