--- a/newEquipmentpage/gamingPage.html
+++ b/newEquipmentpage/gamingPage.html
@@ -41,7 +41,7 @@
         margin: auto;
         text-decoration-color: #000;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .cardTop {
@@ -57,7 +57,7 @@
         margin: auto;
         text-decoration-color: #000;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .cardSelect {
@@ -74,7 +74,7 @@
         margin: auto;
         color: #ffffff;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .cardSelect img {
@@ -114,6 +114,7 @@
 
     .spacer {
         height: 30px;
+        width: 100%;
     }
 
     .spacerX {
@@ -126,8 +127,8 @@
     }
 
     .itemBox {
-        height: 300px;
-        width: 250px;
+        height: 250px;
+        width: 300px;
         border: 1px solid rgb(193, 193, 193);
         border-radius: 10px;
         text-decoration-color: #000000;
@@ -142,8 +143,10 @@
     .itemBox img {
         display: block;
         margin: auto;
-        height: 85%;
-        width: 85%;        
+        height: 200px;
+        width: 100%;        
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;      
     }
 
     a {
@@ -177,7 +180,7 @@
         margin: auto;
         color: #ffffff;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .openbtn {
@@ -224,6 +227,9 @@
         }
         .itemTitle {
             display: block;
+        }
+        .spacer {
+            display: none;
         }
     }
 </style>
@@ -306,7 +312,7 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/GamingConsoles">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_GamingConsoles.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/controllers2.JPG" /> 
             </a>
             <br>
             <div class="padding">
@@ -315,7 +321,7 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/Nintendo">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Nintendo.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/nintendogames4.JPG" /> 
             </a>
             <br>
             <div class="padding">
@@ -324,7 +330,7 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/PlayStation">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_PlayStation.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/PS5GAMES2.JPG" /> 
             </a>
             <br>
             <div class="padding">
@@ -333,20 +339,11 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/VR">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_VR.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/vr.JPG" /> 
             </a>
             <br>
             <div class="padding">
                 VR Consoles &amp; Controllers
-            </div>
-        </div>
-        <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/Xbox">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Xbox.png" /> 
-            </a>
-            <br>
-            <div class="padding">
-                Xbox One Games
             </div>
         </div>
         <div class="spacer"></div>
