--- a/newEquipmentpage/photoPage.html
+++ b/newEquipmentpage/photoPage.html
@@ -41,7 +41,7 @@
         margin: auto;
         text-decoration-color: #000;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .cardTop {
@@ -57,7 +57,7 @@
         margin: auto;
         text-decoration-color: #000;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .cardSelect {
@@ -74,7 +74,7 @@
         margin: auto;
         color: #ffffff;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .cardSelect img {
@@ -114,6 +114,7 @@
 
     .spacer {
         height: 30px;
+        width: 100%;
     }
 
     .spacerX {
@@ -126,8 +127,8 @@
     }
 
     .itemBox {
-        height: 300px;
-        width: 250px;
+        height: 250px;
+        width: 300px;
         border: 1px solid rgb(193, 193, 193);
         border-radius: 10px;
         text-decoration-color: #000000;
@@ -142,8 +143,10 @@
     .itemBox img {
         display: block;
         margin: auto;
-        height: 85%;
-        width: 85%;        
+        height: 200px;
+        width: 100%;        
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;      
     }
 
     a {
@@ -177,7 +180,7 @@
         margin: auto;
         color: #ffffff;
         position: relative;
-        cursor: grab;
+        cursor: pointer;
     }
 
     .openbtn {
@@ -224,6 +227,9 @@
         }
         .itemTitle {
             display: block;
+        }
+        .spacer {
+            display: none;
         }
     }
 </style>
@@ -306,17 +312,8 @@
             Photo/Video Equipment
         </div>
         <div class="itemBox">
-            <a href="https://bookit.dmc.jhu.edu/reserve/PhotoVideoCables">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_PhotoVideoCables.png" /> 
-            </a>
-            <br>
-            <div class="padding">
-                Cables &amp; Adapters
-            </div>
-        </div>
-        <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/Cameras">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Cameras.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/camera.JPG" /> 
             </a>
             <br>
             <div class="padding">
@@ -325,7 +322,7 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/Lenses">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Lenses.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/lenses.JPG" /> 
             </a>
             <br>
             <div class="padding">
@@ -334,7 +331,7 @@
         </div>
         <div class="itemBox">
             <a href="https://bookit.dmc.jhu.edu/reserve/Lights">
-                <img src="https://libapps.s3.amazonaws.com/customers/9396/images/gridicon_Lights.png" /> 
+                <img src="https://d2jv02qf7xgjwx.cloudfront.net/customers/9396/images/lighting.JPG" /> 
             </a>
             <br>
             <div class="padding">
